# DistrCalc

./: .gitignore  CMakeLists.txt  Self.c  Self.h  ipc.c  pa1.c  utils.c  utils.h
inc/lib/: entity.h  ipc.h  ipc_utils.h  lamp_time.h  message_processing.h  queue.h  self.h  utils.h
src/: CMakeLists.txt  pa1.c  pa23.c  pa4.c  pa5.c
src/lib/: bank_robbery.c  banking.c  entity.c  ipc.c  ipc_utils.c  lamp_time.c  message_processing.c  queue.c  self.c  utils.c
